{
    "name": "RG_Inputs",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "9762117e-0944-402f-a702-5bb678d0c81d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0582bad8-feec-41df-812b-ba83f2ca75ae",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "UpDown",
                    "id": "6e801bb5-5aa9-4042-a32e-83b0461c4ac2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3bae842c-73c8-4031-a448-f2581173377d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "04013b6d-e862-4523-b93d-257da0ecc3d0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "23b956a2-0790-465d-b9ca-fded8c6c27f2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "58a66dfd-c40d-4edf-98a4-c6c878ffa5a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "UpDown",
                    "id": "dfa75166-1345-41a1-bd3c-d8834dbd8cdd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2532ff02-f756-41d1-a3fd-bdecd3818e3f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "aa7d8a78-9bc8-4ef3-a598-4c313d74785f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "General",
            "id": "c39f6c1d-28ac-47cf-b225-24aee5d48c25",
            "actions": [
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "26eea5d3-349e-4e82-967d-26f2efa927a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a344a883-13b2-4f62-8a80-2c77cd82c3ab",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}